# libav

./: .gitignore  .gitlab-ci.yml  README.meson  capture_build_options.py  depgraph.py  depresolver.py  find_things.py  find_things_extern.py  meson.build  meson_options.txt  parse_sources.py  print_things.py  rc_workaround.py  recursive_selects.py  update_exports.py
ci/: vs-arm64-cross-file.txt
compat/windows/: avcodec.def  avdevice.def  avfilter.def  avformat.def  avresample.def  avutil.def  makedef.py  postproc.def  swresample.def  swscale.def
ffbuild/: bin2c.py
fftools/: meson.build
libavcodec/: Makefile  avcodec.c  encode.c  h261.h  h261dec.c  h261enc.c  h263dec.c  idctdsp.c  ituh263dec.c  ituh263enc.c  libavcodec.v.in  meson.build  mpegvideo_enc.c  mpegvideo_motion.c  mpv_reconstruct_mb_template.c  ratecontrol.c  version.h.in  vp8.c
libavcodec/aarch64/: meson.build
libavcodec/arm/: meson.build
libavcodec/neon/: meson.build
libavcodec/x86/: cabac.h  fdctdsp_init.c  h264_cabac.c  hpeldsp_init.c  meson.build  vc1dsp_init.c
libavdevice/: libavdevice.v.in  meson.build  version.h.in
libavfilter/: libavfilter.v.in  meson.build  version.h.in  vf_vpp_qsv.c
libavfilter/aarch64/: meson.build
libavfilter/dnn/: meson.build
libavfilter/x86/: meson.build  vf_v360.asm
libavformat/: avidec.c  libavformat.v.in  meson.build  version.h.in
libavresample/: libavresample.v.in  meson.build  version.h.in
libavresample/aarch64/: meson.build
libavresample/arm/: meson.build
libavresample/x86/: meson.build
libavutil/: libavutil.v.in  meson.build  version.h.in  version.py
libavutil/aarch64/: meson.build
libavutil/arm/: meson.build
libavutil/x86/: intmath.h  meson.build
libpostproc/: libpostproc.v.in  meson.build  version.h.in
libswresample/: libswresample.v.in  meson.build  version.h.in
libswresample/aarch64/: meson.build
libswresample/arm/: meson.build
libswresample/x86/: meson.build
libswscale/: libswscale.v.in  meson.build  version.h.in
libswscale/aarch64/: meson.build
libswscale/arm/: meson.build
libswscale/x86/: meson.build  yuv2rgb.c
meson_asm_checks/: avx2_external.asm  avx512_external.asm  fma4_external.asm  xop_external.asm
subprojects/win-nasm/: download-binary.py  meson.build  patch_nasm.py
