# pkg-config options
option('alsa', type: 'feature', value: 'auto')
option('avisynth', type: 'feature', value: 'auto')
option('avfoundation_indev', type: 'feature', value: 'auto')
option('coreimage_filter', type: 'feature', value: 'auto')
option('coreimagesrc_filter', type: 'feature', value: 'auto')
option('decklink', type: 'feature', value: 'auto')
option('decklink_outdev', type: 'feature', value: 'auto')
option('decklink_indev', type: 'feature', value: 'auto')
option('ffnvcodec', type: 'feature', value: 'auto')
option('frei0r', type: 'feature', value: 'auto')
option('libgme', type: 'feature', value: 'auto')
option('gnutls', type: 'feature', value: 'auto')
option('libaom', type: 'feature', value: 'auto')
option('ladspa', type: 'feature', value: 'auto')
option('lv2', type: 'feature', value: 'auto')
option('libass', type: 'feature', value: 'auto')
option('libbluray', type: 'feature', value: 'auto')
option('libbs2b', type: 'feature', value: 'auto')
option('libcaca', type: 'feature', value: 'auto')
option('libcdio', type: 'feature', value: 'auto')
option('libcdio', type: 'feature', value: 'auto')
option('libdc1394', type: 'feature', value: 'auto')
option('libdrm', type: 'feature', value: 'auto')
option('libfdk_aac', type: 'feature', value: 'auto')
option('libfontconfig', type: 'feature', value: 'auto')
option('libfreetype', type: 'feature', value: 'auto')
option('libfribidi', type: 'feature', value: 'auto')
option('libjack', type: 'feature', value: 'auto')
option('libkvazaar', type: 'feature', value: 'auto')
option('libglslang', type: 'feature', value: 'auto')
option('libmfx', type: 'feature', value: 'auto')
option('libmodplug', type: 'feature', value: 'auto')
option('libopencv', type: 'feature', value: 'auto')
option('libopencv', type: 'feature', value: 'auto')
option('libopenh264', type: 'feature', value: 'auto')
option('libopenjpeg', type: 'feature', value: 'auto')
option('libopenjpeg', type: 'feature', value: 'auto')
option('libopenmpt', type: 'feature', value: 'auto')
option('libopus', type: 'feature', value: 'auto')
option('libpulse', type: 'feature', value: 'auto')
option('librabbitmq', type: 'feature', value: 'auto')
option('librav1e', type: 'feature', value: 'auto')
option('librsvg', type: 'feature', value: 'auto')
option('librtmp', type: 'feature', value: 'auto')
option('librubberband', type: 'feature', value: 'auto')
option('libshine', type: 'feature', value: 'auto')
option('libsmbclient', type: 'feature', value: 'auto')
option('libssh', type: 'feature', value: 'auto')
option('libspeex', type: 'feature', value: 'auto')
option('libsrt', type: 'feature', value: 'auto')
option('libtesseract', type: 'feature', value: 'auto')
option('libtls', type: 'feature', value: 'auto')
option('libv4l2', type: 'feature', value: 'auto')
option('libvidstab', type: 'feature', value: 'auto')
option('libvmaf', type: 'feature', value: 'auto')
option('libvorbis', type: 'feature', value: 'auto')
option('libvorbisenc', type: 'feature', value: 'auto')
option('libvpx_vp8_decoder', type: 'feature', value: 'auto')
option('libvpx_vp8_encoder', type: 'feature', value: 'auto')
option('libvpx_vp9_decoder', type: 'feature', value: 'auto')
option('libvpx_vp9_encoder', type: 'feature', value: 'auto')
option('libwebp', type: 'feature', value: 'auto')
option('libwebp_anim_encoder', type: 'feature', value: 'auto')
option('libx264', type: 'feature', value: 'auto')
option('libx265', type: 'feature', value: 'auto')
option('libxcb', type: 'feature', value: 'auto')
option('libxcb_shm', type: 'feature', value: 'auto')
option('libxcb_shape', type: 'feature', value: 'auto')
option('libxcb_xfixes', type: 'feature', value: 'auto')
option('libxml2', type: 'feature', value: 'auto')
option('libzimg', type: 'feature', value: 'auto')
option('libzmq', type: 'feature', value: 'auto')
option('libzvbi', type: 'feature', value: 'auto')
option('openssl', type: 'feature', value: 'auto')
option('rkmpp', type: 'feature', value: 'auto')
option('rockchip_mpp', type: 'feature', value: 'auto')
option('sdl2', type: 'feature', value: 'auto')

# library options
option('advapi32', type: 'feature', value: 'auto')
option('alsa', type: 'feature', value: 'auto')
option('android', type: 'feature', value: 'auto')
option('bcrypt', type: 'feature', value: 'auto')
option('bzlib', type: 'feature', value: 'auto')
option('camera2ndk', type: 'feature', value: 'auto')
option('libcelt', type: 'feature', value: 'auto')
option('chromaprint', type: 'feature', value: 'auto')
option('clock_gettime', type: 'feature', value: 'auto')
option('clock_gettime', type: 'feature', value: 'auto')
option('ff_cuda_sdk', type: 'feature', value: 'auto') # cuda_sdk in ffmpeg
option('crystalhd', type: 'feature', value: 'auto')
option('libgme', type: 'feature', value: 'auto')
option('gcrypt', type: 'feature', value: 'auto')
option('gmp', type: 'feature', value: 'auto')
option('libaribb24', type: 'feature', value: 'auto')
option('libcdio', type: 'feature', value: 'auto')
option('libcdio', type: 'feature', value: 'auto')
option('libcodec2', type: 'feature', value: 'auto')
option('libdav1d', type: 'feature', value: 'auto')
option('libdl', type: 'feature', value: 'auto')
option('libdl', type: 'feature', value: 'auto')
option('libfdk_aac', type: 'feature', value: 'auto')
option('libflite', type: 'feature', value: 'auto')
option('libgsm', type: 'feature', value: 'auto')
option('libgsm', type: 'feature', value: 'auto')
option('libiec61883', type: 'feature', value: 'auto')
option('libilbc', type: 'feature', value: 'auto')
option('libnpp', type: 'feature', value: 'auto')
option('libopencore_amrnb', type: 'feature', value: 'auto')
option('libopencore_amrwb', type: 'feature', value: 'auto')
option('libopencv', type: 'feature', value: 'auto')
option('libsmbclient', type: 'feature', value: 'auto')
option('libsnappy', type: 'feature', value: 'auto')
option('libsoxr', type: 'feature', value: 'auto')
option('libtheora', type: 'feature', value: 'auto')
option('libtwolame', type: 'feature', value: 'auto')
option('libvo_amrwbenc', type: 'feature', value: 'auto')
option('libvpx_vp8_decoder', type: 'feature', value: 'auto')
option('libvpx_vp8_encoder', type: 'feature', value: 'auto')
option('libvpx_vp9_decoder', type: 'feature', value: 'auto')
option('libvpx_vp9_encoder', type: 'feature', value: 'auto')
option('libwavpack', type: 'feature', value: 'auto')
option('libxvid', type: 'feature', value: 'auto')
option('linux_fbdev', type: 'feature', value: 'auto')
option('lzma', type: 'feature', value: 'auto')
option('mediandk', type: 'feature', value: 'auto')
option('mmal', type: 'feature', value: 'auto')
option('nanosleep', type: 'feature', value: 'auto')
option('ole32', type: 'feature', value: 'auto')
option('openal', type: 'feature', value: 'auto')
option('openal', type: 'feature', value: 'auto')
option('opencl', type: 'feature', value: 'auto')
option('opengl', type: 'feature', value: 'auto')
option('opengl', type: 'feature', value: 'auto')
option('openssl', type: 'feature', value: 'auto')
option('openssl', type: 'feature', value: 'auto')
option('openssl', type: 'feature', value: 'auto')
option('psapi', type: 'feature', value: 'auto')
option('shell32', type: 'feature', value: 'auto')
option('pocketsphinx', type: 'feature', value: 'auto')
option('sndio', type: 'feature', value: 'auto')
option('user32', type: 'feature', value: 'auto')
option('vfw32', type: 'feature', value: 'auto')
option('vaapi', type: 'feature', value: 'auto')
option('zlib', type: 'feature', value: 'auto')
option('vaapi_drm', type: 'feature', value: 'auto')
option('vaapi_x11', type: 'feature', value: 'auto')
option('vdpau_x11', type: 'feature', value: 'auto')
option('libmfx', type: 'feature', value: 'auto')
option('libmp3lame', type: 'feature', value: 'auto')
option('mediafoundation', type: 'feature', value: 'auto')
option('libmysofa', type: 'feature', value: 'auto')
option('libx264', type: 'feature', value: 'auto')
option('libxavs', type: 'feature', value: 'auto')
option('omx', type: 'feature', value: 'auto')

# Licensing options
option('gpl', type: 'feature', value: 'disabled',
  description: 'Allow use of GPL code, the resulting libs and binaries will be under GPL')
option('version3', type: 'feature', value: 'disabled',
  description: 'Upgrade (L)GPL to version 3')
option('nonfree', type: 'feature', value: 'disabled',
  description: 'Allow use of nonfree code, the resulting libs and binaries will be unredistributable')

# other options
# cli is disabled by default to speed up the build since it links statically
option('cli', type: 'feature', value: 'disabled')
option('tests', type : 'feature', value : 'auto', description : 'Build tests')
