libavfilter_majorver = '7'
minorver = '12'
microver = '100'

libavfilter_version = libavfilter_majorver + '.' + minorver + '.' + microver

cc = meson.get_compiler('c')

libavfilter_sources = files([
  'allfilters.c',
  'audio.c',
  'avfilter.c',
  'avfiltergraph.c',
  'buffersink.c',
  'buffersrc.c',
  'drawutils.c',
  'fifo.c',
  'formats.c',
  'framepool.c',
  'framequeue.c',
  'graphdump.c',
  'graphparser.c',
  'transform.c',
  'video.c',
  'pthread.c',
])

libavfilter_optional_sources = {
  'abench_filter' : files('f_bench.c'),
  'abitscope_filter' : files('avf_abitscope.c'),
  'acompressor_filter' : files('af_sidechaincompress.c'),
  'acontrast_filter' : files('af_acontrast.c'),
  'acopy_filter' : files('af_acopy.c'),
  'acrossfade_filter' : files('af_afade.c'),
  'acrusher_filter' : files('af_acrusher.c'),
  'adeclick_filter' : files('af_adeclick.c'),
  'adeclip_filter' : files('af_adeclick.c'),
  'adelay_filter' : files('af_adelay.c'),
  'aderivative_filter' : files('af_aderivative.c'),
  'adrawgraph_filter' : files('f_drawgraph.c'),
  'aecho_filter' : files('af_aecho.c'),
  'aemphasis_filter' : files('af_aemphasis.c'),
  'aevalsrc_filter' : files('aeval.c'),
  'aeval_filter' : files('aeval.c'),
  'afade_filter' : files('af_afade.c'),
  'afftfilt_filter' : files('af_afftfilt.c'),
  'afir_filter' : files('af_afir.c'),
  'aformat_filter' : files('af_aformat.c'),
  'agate_filter' : files('af_agate.c'),
  'ahistogram_filter' : files('avf_ahistogram.c'),
  'aiir_filter' : files('af_aiir.c'),
  'aintegral_filter' : files('af_aderivative.c'),
  'ainterleave_filter' : files('f_interleave.c'),
  'alimiter_filter' : files('af_alimiter.c'),
  'allpass_filter' : files('af_biquads.c'),
  'allrgb_filter' : files('vsrc_testsrc.c'),
  'allyuv_filter' : files('vsrc_testsrc.c'),
  'aloop_filter' : files('f_loop.c'),
  'alphaextract_filter' : files('vf_extractplanes.c'),
  'alphamerge_filter' : files('vf_alphamerge.c'),
  'amerge_filter' : files('af_amerge.c'),
  'ametadata_filter' : files('f_metadata.c'),
  'amix_filter' : files('af_amix.c'),
  'amovie_filter' : files('src_movie.c'),
  'amplify_filter' : files('vf_amplify.c'),
  'anequalizer_filter' : files('af_anequalizer.c'),
  'anoisesrc_filter' : files('asrc_anoisesrc.c'),
  'anullsink_filter' : files('asink_anullsink.c'),
  'anullsrc_filter' : files('asrc_anullsrc.c'),
  'anull_filter' : files('af_anull.c'),
  'apad_filter' : files('af_apad.c'),
  'aperms_filter' : files('f_perms.c'),
  'aphasemeter_filter' : files('avf_aphasemeter.c'),
  'aphaser_filter' : files('af_aphaser.c','generate_wave_table.c'),
  'apulsator_filter' : files('af_apulsator.c'),
  'arealtime_filter' : files('f_realtime.c'),
  'aresample_filter' : files('af_aresample.c'),
  'areverse_filter' : files('f_reverse.c'),
  'aselect_filter' : files('f_select.c'),
  'asendcmd_filter' : files('f_sendcmd.c'),
  'asetnsamples_filter' : files('af_asetnsamples.c'),
  'asetpts_filter' : files('setpts.c'),
  'asetrate_filter' : files('af_asetrate.c'),
  'asettb_filter' : files('settb.c'),
  'ashowinfo_filter' : files('af_ashowinfo.c'),
  'asidedata_filter' : files('f_sidedata.c'),
  'asplit_filter' : files('split.c'),
  'ass_filter' : files('vf_subtitles.c'),
  'astats_filter' : files('af_astats.c'),
  'astreamselect_filter' : files('f_streamselect.c','framesync.c'),
  'atadenoise_filter' : files('vf_atadenoise.c'),
  'atempo_filter' : files('af_atempo.c'),
  'atrim_filter' : files('trim.c'),
  'avectorscope_filter' : files('avf_avectorscope.c'),
  'avgblur_filter' : files('vf_avgblur.c'),
  'avgblur_opencl_filter' : files('vf_avgblur_opencl.c','opencl.c','opencl/avgblur.cl'),
  'azmq_filter' : files('f_zmq.c'),
  'bandpass_filter' : files('af_biquads.c'),
  'bandreject_filter' : files('af_biquads.c'),
  'bass_filter' : files('af_biquads.c'),
  'bbox_filter' : files('bbox.c','vf_bbox.c'),
  'bench_filter' : files('f_bench.c'),
  'biquad_filter' : files('af_biquads.c'),
  'bitplanenoise_filter' : files('vf_bitplanenoise.c'),
  'blackdetect_filter' : files('vf_blackdetect.c'),
  'blackframe_filter' : files('vf_blackframe.c'),
  'blend_filter' : files('vf_blend.c','framesync.c'),
  'boxblur_filter' : files('vf_boxblur.c'),
  'bs2b_filter' : files('af_bs2b.c'),
  'bwdif_filter' : files('vf_bwdif.c'),
  'cellauto_filter' : files('vsrc_cellauto.c'),
  'channelmap_filter' : files('af_channelmap.c'),
  'channelsplit_filter' : files('af_channelsplit.c'),
  'chorus_filter' : files('af_chorus.c','generate_wave_table.c'),
  'chromakey_filter' : files('vf_chromakey.c'),
  'ciescope_filter' : files('vf_ciescope.c'),
  'codecview_filter' : files('vf_codecview.c'),
  'colorbalance_filter' : files('vf_colorbalance.c'),
  'colorchannelmixer_filter' : files('vf_colorchannelmixer.c'),
  'colorkey_filter' : files('vf_colorkey.c'),
  'colorlevels_filter' : files('vf_colorlevels.c'),
  'colormatrix_filter' : files('vf_colormatrix.c'),
  'colorspace_filter' : files('vf_colorspace.c','colorspacedsp.c'),
  'color_filter' : files('vsrc_testsrc.c'),
  'compand_filter' : files('af_compand.c'),
  'compensationdelay_filter' : files('af_compensationdelay.c'),
  'concat_filter' : files('avf_concat.c'),
  'convolution_filter' : files('vf_convolution.c'),
  'convolution_opencl_filter' : files('vf_convolution_opencl.c','opencl.c','opencl/convolution.cl'),
  'convolve_filter' : files('vf_convolve.c','framesync.c'),
  'copy_filter' : files('vf_copy.c'),
  'coreimagesrc_filter' : files('vf_coreimage.m'),
  'coreimage_filter' : files('vf_coreimage.m'),
  'cover_rect_filter' : files('vf_cover_rect.c','lavfutils.c'),
  'cropdetect_filter' : files('vf_cropdetect.c'),
  'crop_filter' : files('vf_crop.c'),
  'crossfeed_filter' : files('af_crossfeed.c'),
  'crystalizer_filter' : files('af_crystalizer.c'),
  'curves_filter' : files('vf_curves.c'),
  'datascope_filter' : files('vf_datascope.c'),
  'dcshift_filter' : files('af_dcshift.c'),
  'dctdnoiz_filter' : files('vf_dctdnoiz.c'),
  'deband_filter' : files('vf_deband.c'),
  'deblock_filter' : files('vf_deblock.c'),
  'decimate_filter' : files('vf_decimate.c'),
  'deconvolve_filter' : files('vf_convolve.c','framesync.c'),
  'deflate_filter' : files('vf_neighbor.c'),
  'deflicker_filter' : files('vf_deflicker.c'),
  'deinterlace_qsv_filter' : files('vf_deinterlace_qsv.c'),
  'deinterlace_vaapi_filter' : files('vf_deinterlace_vaapi.c','vaapi_vpp.c'),
  'dejudder_filter' : files('vf_dejudder.c'),
  'delogo_filter' : files('vf_delogo.c'),
  'denoise_vaapi_filter' : files('vf_misc_vaapi.c','vaapi_vpp.c'),
  'deshake_filter' : files('vf_deshake.c'),
  'despill_filter' : files('vf_despill.c'),
  'detelecine_filter' : files('vf_detelecine.c'),
  'dilation_filter' : files('vf_neighbor.c'),
  'displace_filter' : files('vf_displace.c','framesync.c'),
  'dnn' : files('dnn_interface.c','dnn_backend_native.c'),
  'doubleweave_filter' : files('vf_weave.c'),
  'drawbox_filter' : files('vf_drawbox.c'),
  'drawgraph_filter' : files('f_drawgraph.c'),
  'drawgrid_filter' : files('vf_drawbox.c'),
  'drawtext_filter' : files('vf_drawtext.c'),
  'drmeter_filter' : files('af_drmeter.c'),
  'dynaudnorm_filter' : files('af_dynaudnorm.c'),
  'earwax_filter' : files('af_earwax.c'),
  'ebur128_filter' : files('f_ebur128.c'),
  'edgedetect_filter' : files('vf_edgedetect.c'),
  'elbg_filter' : files('vf_elbg.c'),
  'entropy_filter' : files('vf_entropy.c'),
  'equalizer_filter' : files('af_biquads.c'),
  'eq_filter' : files('vf_eq.c'),
  'erosion_filter' : files('vf_neighbor.c'),
  'extractplanes_filter' : files('vf_extractplanes.c'),
  'extrastereo_filter' : files('af_extrastereo.c'),
  'fade_filter' : files('vf_fade.c'),
  'fftdnoiz_filter' : files('vf_fftdnoiz.c'),
  'fftfilt_filter' : files('vf_fftfilt.c'),
  'fieldhint_filter' : files('vf_fieldhint.c'),
  'fieldmatch_filter' : files('vf_fieldmatch.c'),
  'fieldorder_filter' : files('vf_fieldorder.c'),
  'field_filter' : files('vf_field.c'),
  'fillborders_filter' : files('vf_fillborders.c'),
  'find_rect_filter' : files('vf_find_rect.c','lavfutils.c'),
  'firequalizer_filter' : files('af_firequalizer.c'),
  'flanger_filter' : files('af_flanger.c','generate_wave_table.c'),
  'flite_filter' : files('asrc_flite.c'),
  'floodfill_filter' : files('vf_floodfill.c'),
  'format_filter' : files('vf_format.c'),
  'fps_filter' : files('vf_fps.c'),
  'framepack_filter' : files('vf_framepack.c'),
  'framerate_filter' : files('vf_framerate.c'),
  'framestep_filter' : files('vf_framestep.c'),
  'frei0r_filter' : files('vf_frei0r.c'),
  'frei0r_src_filter' : files('vf_frei0r.c'),
  'fspp_filter' : files('vf_fspp.c'),
  'gblur_filter' : files('vf_gblur.c'),
  'geq_filter' : files('vf_geq.c'),
  'gradfun_filter' : files('vf_gradfun.c'),
  'haas_filter' : files('af_haas.c'),
  'haldclutsrc_filter' : files('vsrc_testsrc.c'),
  'haldclut_filter' : files('vf_lut3d.c','framesync.c'),
  'hdcd_filter' : files('af_hdcd.c'),
  'headphone_filter' : files('af_headphone.c'),
  'hflip_filter' : files('vf_hflip.c'),
  'highpass_filter' : files('af_biquads.c'),
  'highshelf_filter' : files('af_biquads.c'),
  'hilbert_filter' : files('asrc_hilbert.c'),
  'histeq_filter' : files('vf_histeq.c'),
  'histogram_filter' : files('vf_histogram.c'),
  'hqdn3d_filter' : files('vf_hqdn3d.c'),
  'hqx_filter' : files('vf_hqx.c'),
  'hstack_filter' : files('vf_stack.c','framesync.c'),
  'hue_filter' : files('vf_hue.c'),
  'hwdownload_filter' : files('vf_hwdownload.c'),
  'hwmap_filter' : files('vf_hwmap.c'),
  'hwupload_cuda_filter' : files('vf_hwupload_cuda.c'),
  'hwupload_filter' : files('vf_hwupload.c'),
  'hysteresis_filter' : files('vf_hysteresis.c','framesync.c'),
  'idet_filter' : files('vf_idet.c'),
  'il_filter' : files('vf_il.c'),
  'inflate_filter' : files('vf_neighbor.c'),
  'interlace_filter' : files('vf_tinterlace.c'),
  'interleave_filter' : files('f_interleave.c'),
  'join_filter' : files('af_join.c'),
  'kerndeint_filter' : files('vf_kerndeint.c'),
  'ladspa_filter' : files('af_ladspa.c'),
  'lenscorrection_filter' : files('vf_lenscorrection.c'),
  'libvmaf_filter' : files('vf_libvmaf.c','framesync.c'),
  'life_filter' : files('vsrc_life.c'),
  'limiter_filter' : files('vf_limiter.c'),
  'loop_filter' : files('f_loop.c'),
  'loudnorm_filter' : files('af_loudnorm.c','ebur128.c'),
  'lowpass_filter' : files('af_biquads.c'),
  'lowshelf_filter' : files('af_biquads.c'),
  'lumakey_filter' : files('vf_lumakey.c'),
  'lut2_filter' : files('vf_lut2.c','framesync.c'),
  'lut3d_filter' : files('vf_lut3d.c'),
  'lutrgb_filter' : files('vf_lut.c'),
  'lutyuv_filter' : files('vf_lut.c'),
  'lut_filter' : files('vf_lut.c'),
  'lv2_filter' : files('af_lv2.c'),
  'mandelbrot_filter' : files('vsrc_mandelbrot.c'),
  'maskedclamp_filter' : files('vf_maskedclamp.c','framesync.c'),
  'maskedmerge_filter' : files('vf_maskedmerge.c','framesync.c'),
  'mcdeint_filter' : files('vf_mcdeint.c'),
  'mcompand_filter' : files('af_mcompand.c'),
  'mergeplanes_filter' : files('vf_mergeplanes.c','framesync.c'),
  'mestimate_filter' : files('vf_mestimate.c','motion_estimation.c'),
  'metadata_filter' : files('f_metadata.c'),
  'midequalizer_filter' : files('vf_midequalizer.c','framesync.c'),
  'minterpolate_filter' : files('vf_minterpolate.c','motion_estimation.c'),
  'mix_filter' : files('vf_mix.c'),
  'movie_filter' : files('src_movie.c'),
  'mpdecimate_filter' : files('vf_mpdecimate.c'),
  'mptestsrc_filter' : files('vsrc_mptestsrc.c'),
  'negate_filter' : files('vf_lut.c'),
  'nlmeans_filter' : files('vf_nlmeans.c'),
  'nnedi_filter' : files('vf_nnedi.c'),
  'noformat_filter' : files('vf_format.c'),
  'noise_filter' : files('vf_noise.c'),
  'normalize_filter' : files('vf_normalize.c'),
  'nullsink_filter' : files('vsink_nullsink.c'),
  'nullsrc_filter' : files('vsrc_testsrc.c'),
  'null_filter' : files('vf_null.c'),
  'ocr_filter' : files('vf_ocr.c'),
  'ocv_filter' : files('vf_libopencv.c'),
  'openclsrc_filter' : files('vf_program_opencl.c','opencl.c'),
  'oscilloscope_filter' : files('vf_datascope.c'),
  'overlay_filter' : files('vf_overlay.c','framesync.c'),
  'overlay_opencl_filter' : files('vf_overlay_opencl.c','opencl.c','opencl/overlay.cl','framesync.c'),
  'overlay_qsv_filter' : files('vf_overlay_qsv.c','framesync.c'),
  'owdenoise_filter' : files('vf_owdenoise.c'),
  'pad_filter' : files('vf_pad.c'),
  'pal100bars_filter' : files('vsrc_testsrc.c'),
  'pal75bars_filter' : files('vsrc_testsrc.c'),
  'palettegen_filter' : files('vf_palettegen.c'),
  'paletteuse_filter' : files('vf_paletteuse.c','framesync.c'),
  'pan_filter' : files('af_pan.c'),
  'perms_filter' : files('f_perms.c'),
  'perspective_filter' : files('vf_perspective.c'),
  'phase_filter' : files('vf_phase.c'),
  'pixdesctest_filter' : files('vf_pixdesctest.c'),
  'pixscope_filter' : files('vf_datascope.c'),
  'pp7_filter' : files('vf_pp7.c'),
  'pp_filter' : files('vf_pp.c'),
  'premultiply_filter' : files('vf_premultiply.c','framesync.c'),
  'prewitt_filter' : files('vf_convolution.c'),
  'procamp_vaapi_filter' : files('vf_procamp_vaapi.c','vaapi_vpp.c'),
  'program_opencl_filter' : files('vf_program_opencl.c','opencl.c','framesync.c'),
  'pseudocolor_filter' : files('vf_pseudocolor.c'),
  'psnr_filter' : files('vf_psnr.c','framesync.c'),
  'pullup_filter' : files('vf_pullup.c'),
  'qp_filter' : files('vf_qp.c'),
  'qsvvpp' : files('qsvvpp.c'),
  'random_filter' : files('vf_random.c'),
  'readeia608_filter' : files('vf_readeia608.c'),
  'readvitc_filter' : files('vf_readvitc.c'),
  'realtime_filter' : files('f_realtime.c'),
  'remap_filter' : files('vf_remap.c','framesync.c'),
  'removegrain_filter' : files('vf_removegrain.c'),
  'removelogo_filter' : files('bbox.c','lswsutils.c','lavfutils.c','vf_removelogo.c'),
  'repeatfields_filter' : files('vf_repeatfields.c'),
  'replaygain_filter' : files('af_replaygain.c'),
  'resample_filter' : files('af_resample.c'),
  'reverse_filter' : files('f_reverse.c'),
  'rgbtestsrc_filter' : files('vsrc_testsrc.c'),
  'roberts_filter' : files('vf_convolution.c'),
  'rotate_filter' : files('vf_rotate.c'),
  'rubberband_filter' : files('af_rubberband.c'),
  'sab_filter' : files('vf_sab.c'),
  'scale2ref_filter' : files('vf_scale.c','scale.c'),
  # 'scale_cuda_filter' : files('vf_scale_cuda.c','vf_scale_cuda.ptx.c'),
  'scale_filter' : files('vf_scale.c','scale.c'),
  'scale_npp_filter' : files('vf_scale_npp.c','scale.c'),
  'scale_qsv_filter' : files('vf_scale_qsv.c'),
  'scale_vaapi_filter' : files('vf_scale_vaapi.c','scale.c','vaapi_vpp.c'),
  'selectivecolor_filter' : files('vf_selectivecolor.c'),
  'select_filter' : files('f_select.c'),
  'sendcmd_filter' : files('f_sendcmd.c'),
  'separatefields_filter' : files('vf_separatefields.c'),
  'setdar_filter' : files('vf_aspect.c'),
  'setfield_filter' : files('vf_setfield.c'),
  'setpts_filter' : files('setpts.c'),
  'setrange_filter' : files('vf_setparams.c'),
  'setsar_filter' : files('vf_aspect.c'),
  'settb_filter' : files('settb.c'),
  'shared' : files('log2_tab.c'),
  'sharpness_vaapi_filter' : files('vf_misc_vaapi.c','vaapi_vpp.c'),
  'showcqt_filter' : files('avf_showcqt.c','lswsutils.c','lavfutils.c'),
  'showfreqs_filter' : files('avf_showfreqs.c'),
  'showinfo_filter' : files('vf_showinfo.c'),
  'showpalette_filter' : files('vf_showpalette.c'),
  'showspectrumpic_filter' : files('avf_showspectrum.c'),
  'showspectrum_filter' : files('avf_showspectrum.c'),
  'showvolume_filter' : files('avf_showvolume.c'),
  'showwavespic_filter' : files('avf_showwaves.c'),
  'showwaves_filter' : files('avf_showwaves.c'),
  'shuffleframes_filter' : files('vf_shuffleframes.c'),
  'shuffleplanes_filter' : files('vf_shuffleplanes.c'),
  'sidechaincompress_filter' : files('af_sidechaincompress.c'),
  'sidechaingate_filter' : files('af_agate.c'),
  'sidedata_filter' : files('f_sidedata.c'),
  'signalstats_filter' : files('vf_signalstats.c'),
  'signature_filter' : files('vf_signature.c'),
  'silencedetect_filter' : files('af_silencedetect.c'),
  'silenceremove_filter' : files('af_silenceremove.c'),
  'sine_filter' : files('asrc_sine.c'),
  'smartblur_filter' : files('vf_smartblur.c'),
  'smptebars_filter' : files('vsrc_testsrc.c'),
  'smptehdbars_filter' : files('vsrc_testsrc.c'),
  'sobel_filter' : files('vf_convolution.c'),
  'sofalizer_filter' : files('af_sofalizer.c'),
  'spectrumsynth_filter' : files('vaf_spectrumsynth.c'),
  'split_filter' : files('split.c'),
  'spp_filter' : files('vf_spp.c'),
  'srcnn_filter' : files('vf_srcnn.c'),
  'ssim_filter' : files('vf_ssim.c','framesync.c'),
  'stereo3d_filter' : files('vf_stereo3d.c'),
  'stereotools_filter' : files('af_stereotools.c'),
  'stereowiden_filter' : files('af_stereowiden.c'),
  'streamselect_filter' : files('f_streamselect.c','framesync.c'),
  'subtitles_filter' : files('vf_subtitles.c'),
  'super2xsai_filter' : files('vf_super2xsai.c'),
  'superequalizer_filter' : files('af_superequalizer.c'),
  'surround_filter' : files('af_surround.c'),
  'swaprect_filter' : files('vf_swaprect.c'),
  'swapuv_filter' : files('vf_swapuv.c'),
  'tblend_filter' : files('vf_blend.c','framesync.c'),
  'telecine_filter' : files('vf_telecine.c'),
  'testsrc2_filter' : files('vsrc_testsrc.c'),
  'testsrc_filter' : files('vsrc_testsrc.c'),
  'threshold_filter' : files('vf_threshold.c','framesync.c'),
  # 'thumbnail_cuda_filter' : files('vf_thumbnail_cuda.c','vf_thumbnail_cuda.ptx.c'),
  'thumbnail_filter' : files('vf_thumbnail.c'),
  'tile_filter' : files('vf_tile.c'),
  'tinterlace_filter' : files('vf_tinterlace.c'),
  'tlut2_filter' : files('vf_lut2.c','framesync.c'),
  'tmix_filter' : files('vf_mix.c','framesync.c'),
  'tonemap_filter' : files('vf_tonemap.c'),
  'transpose_filter' : files('vf_transpose.c'),
  'treble_filter' : files('af_biquads.c'),
  'tremolo_filter' : files('af_tremolo.c'),
  'trim_filter' : files('trim.c'),
  'unpremultiply_filter' : files('vf_premultiply.c','framesync.c'),
  'unsharp_filter' : files('vf_unsharp.c'),
  'unsharp_opencl_filter' : files('vf_unsharp_opencl.c','opencl.c','opencl/unsharp.cl'),
  'uspp_filter' : files('vf_uspp.c'),
  'vaguedenoiser_filter' : files('vf_vaguedenoiser.c'),
  'vectorscope_filter' : files('vf_vectorscope.c'),
  'vflip_filter' : files('vf_vflip.c'),
  'vfrdet_filter' : files('vf_vfrdet.c'),
  'vibrato_filter' : files('af_vibrato.c','generate_wave_table.c'),
  'vidstabdetect_filter' : files('vidstabutils.c','vf_vidstabdetect.c'),
  'vidstabtransform_filter' : files('vidstabutils.c','vf_vidstabtransform.c'),
  'vignette_filter' : files('vf_vignette.c'),
  'vmafmotion_filter' : files('vf_vmafmotion.c','framesync.c'),
  'volumedetect_filter' : files('af_volumedetect.c'),
  'volume_filter' : files('af_volume.c'),
  'vpp_qsv_filter' : files('vf_vpp_qsv.c'),
  'vstack_filter' : files('vf_stack.c','framesync.c'),
  'w3fdif_filter' : files('vf_w3fdif.c'),
  'waveform_filter' : files('vf_waveform.c'),
  'weave_filter' : files('vf_weave.c'),
  'xbr_filter' : files('vf_xbr.c'),
  'yadif_filter' : files('vf_yadif.c'),
  'yuvtestsrc_filter' : files('vsrc_testsrc.c'),
  'zmq_filter' : files('f_zmq.c'),
  'zoompan_filter' : files('vf_zoompan.c'),
  'zscale_filter' : files('vf_zscale.c'),
}

libavfilter_x86asm_optional_sources = {
}

libavfilter_mmx_optional_sources = {
}

libavfilter_tests = [
  ['drawutils', files(['tests/drawutils.c'])],
  # ['filtfmts', files(['tests/filtfmts.c'])],
  ['formats', files(['tests/formats.c'])],
  ['integral', files(['tests/integral.c'])],
]

libavfilter_optional_tests = {
}

configure_file(
  input: 'version.h.in',
  output: 'version.h',
  configuration: ver_conf,
)

configure_file(
  input: 'libavfilter.v.in',
  output: 'libavfilter.ver',
  configuration: ver_conf,
)

subdir('x86')
